@@ -22,6 +22,9 @@ Changes since 5.0b1
       in system and area summaries in printpf(). Line charging
       injections set to zero for DC power flow results.
     - Added tests for printpf() in t_printpf.m.
+    - Changes to the internally indexed version of gencost now
+      get properly copied back to externally indexed version by
+      int2ext().
 
 11/11/14
     - Added get_losses() function to compute losses, line charging
